<resources>
    <string name="app_name">My Auction</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view" translatable="false">ViewActivity</string>
    <string name="btn_camera_view">Take Picture</string>
    <string name="realizar_lance">Make a Bid</string>
    <string name="nome_produto">Product Name</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="tirar_foto">Take Picture</string>
    <string name="login_google">Login with Google Plus</string>
    <string name="registrar_depois">Register Later</string>
    <string name="title_activity_main" translatable="false">Main Activity</string>
    <string name="novo">New</string>
    <string name="gcm_defaultSenderId" translatable="false">36242552185</string>
    <string name="tempo_leilao">Auction Duration</string>
    <string name="descricao">Description</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="ultimo_lance">Last Bid</string>
    <string name="valor_produto">Product Value</string>

    <string-array name="selecione">
        <item>Galery</item>
        <item>Camera</item>
    </string-array>
    <string name="nearest_auctions">Nearest Auctions</string>
    <string name="end_at_hours">End in: %1$s hours</string>
    <string name="last_bid">Last bid: US$ %1$s</string>
    <string name="you_are_this_auction_owner">You are the owner of this auction.</string>
    <string name="facebook_app_id" translatable="false">1389169854715944</string>
</resources>
