<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_button_activity_main"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/camera_icon"
        android:text="@string/tirar_foto" />

        <RelativeLayout
            android:layout_below="@+id/iv_button_activity_main"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_camera_preview_new_product"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/edt_nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_produto" />

    <EditText
        android:id="@+id/edt_desc_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_nome_produto"
        android:hint="@string/descricao" />

    <EditText
        android:id="@+id/edt_valor_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_desc_produto"
        android:hint="@string/valor_produto"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_tempo_new_product"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_valor_produto"
        android:hint="@string/tempo_leilao"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tempo_new_product"
        android:layout_centerHorizontal="true"
        android:text="OK" />

    </RelativeLayout>
    </RelativeLayout>

</ScrollView>