<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_imgProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_toRightOf="@+id/iv_imgProduto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/nome_produto"
        android:id="@+id/tv_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@+id/tv_nomeProduto"
        android:layout_toRightOf="@+id/iv_imgProduto"
        android:text="@string/descricao"
        android:id="@+id/tv_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_ultimoLance"
        android:layout_below="@+id/tv_descricao"
        android:layout_toRightOf="@+id/iv_imgProduto"
        android:text="@string/ultimo_lance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>